--- a/css/app.css
+++ b/css/app.css
@@ -80,7 +80,13 @@ h1 {
     background: #02ccba;
     font-size: 33px;
 }
-
+.fa {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /*
  * Styles for the Score Panel
  */
